# desklink

./: Cargo.toml  build.rs  config.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: config.rs  lib.rs  main.rs
client/src/subcommands/: mod.rs  status.rs  stop.rs  to.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs  logging.rs
proto/: desk_service.proto
server/: Cargo.toml
server/src/: config.rs  desk.rs  lib.rs  main.rs  service.rs  utils.rs
server/src/controllers/: mod.rs  overshoot.rs
src/: config.rs  desk.rs  lib.rs  logging.rs  main.rs  service.rs  utils.rs
src/controllers/: mod.rs  overshoot.rs
