[package]
name = "desk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "*"
btleplug = {version="*", features=["serde"]}
directories = "*"
futures = "*"
once_cell = "*"
serde = "*"
slog = "*"
slog-term = "*"
structopt = "*"
toml = "*"
tokio = {version="*", features=["macros", "time"]}
uuid = "*"
