[package]
name = "desklink-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deskctl"
path = "src/main.rs"

[dependencies]
desklink-common = { path = "../common" }
anyhow = "*"
directories = "*"
serde = { version = "*", features = ["derive"] }
slog = "*"
slog-term = "*"
structopt = "*"
thiserror = "*"
toml = "*"
tokio = { version = "*", features = ["macros"] }
tonic = "*"
