[package]
name = "desklink-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deskctl"
path = "src/main.rs"

[dependencies]
desklink-common = { path = "../common" }
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
directories = "4.0.1"
serde = { version = "1.0.144", features = ["derive"] }
slog = "2.7.0"
slog-term = "2.9.0"
thiserror = "1.0.34"
toml = "0.5.9"
tokio = { version = "1.21.0", features = ["macros"] }
tonic = "0.8.1"
