[package]
name = "desklink-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deskd"
path = "src/main.rs"

[dependencies]
desklink-common = { path = "../common" }
anyhow = "*"
async-trait = "*"
btleplug = { version = "*", features = ["serde"] }
directories = "*"
futures = "*"
serde = "*"
signal-hook = "*"
signal-hook-tokio = { version = "*", features = ["futures-v0_3"] }
slog = "*"
slog-term = "*"
slog-json = "*"
structopt = "*"
thiserror = "*"
toml = "*"
tonic = "*"
tokio = { version = "*", features = ["macros"] }
tokio-stream = "*"
uuid = "*"
